
Changes in version 0.7.9
- Switch all private members of JApplication to protected to allow access
  from DApplication (specifically locks as requested by Hovanes E.)
- Added JEventLoop::GetCalib() for getting a single number from CalibDB
- Added JObject::Clone method using code provided by Hovanes E.

Changes in version 0.7.8p1
- Print comment from JCalibration when present.
- Extend JEventSource API to include methods to allow random access support

Changes in version 0.7.8
- Implement support of XML geometry in calib DB
- Fix and improve janaview call graph feature. Also fixed bug that caused
  occasional crash during janaview start up.

Changes in version 0.7.7p1
- Use static_cast in JFactory::Get to accomodate classes with multiple
  inheritance (courtesy Andrea Celentano @ INFN)

Changes in version 0.7.7
- Set compiler to use C++11 standard (code now requires it)
- Change container type used for associated objects from map to set
  in order to save RAM.
- Fixed bug where JApplication::threads_mutex wasn't initialized

Changes in version 0.7.6
- Fix bug where factory erun method wasn't getting called at end of
  program.
- Fixed bugs where plugin paths would stop being searched when a
  matching file was found even if it could be attached. Also,
  print information about seach paths before looking for file
  and not just if it failed to find the plugin.
- Expose underlying ccdb::Calibration object pointer and mutex
- Make JObject::oid_t unsigned long long as per Paul M.'s suggestion

Changes in version 0.7.5p2
- Fixed bug (yet again) in JStreamLog destructor that caused seg. faults
  at program exit when using plugins on RHEL6

Changes in version 0.7.5p1
- Added RootFillLock and RootFillUnLock methods to JApplication

Changes in version 0.7.5
- Fixed potential bug in JEventLoopGetFactory where NULL pointers could
  be passed to strcmp
- Fixed bug in PrintFactoryReport where long factory names could cause crash